<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:background="@mipmap/index_banner" />

                <!-- 如果沒有作品 -->

                <!--<TextView-->
                    <!--android:id="@+id/noCollectionTextView"-->
                    <!--style="@style/caption_text_black38"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_centerVertical="false"-->
                    <!--android:background="@color/colorBg"-->
                    <!--android:padding="@dimen/content_padding"-->
                    <!--android:text="@string/no_collection"-->
                    />

                <!-- / 如果沒有作品 -->

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/divider_solid.both"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/divider_solid.middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/service01"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableTop="@mipmap/a001"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="center"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="32dp"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="32dp"
                        android:tag="@string/service01"
                        android:text="@string/service01" />

                    <TextView
                        android:id="@+id/service02"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="@string/service02"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableTop="@mipmap/a002"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="center"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="32dp"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="32dp"
                        android:text="@string/service02" />

                    <TextView
                        android:id="@+id/service03"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="@string/service03"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableTop="@mipmap/a003"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="bottom|center_horizontal"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/member_button_padding"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/member_button_padding"
                        android:text="@string/service03" />
                </LinearLayout>

                <LinearLayout
                    style="@style/divider_solid.middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/service04"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="@string/service04"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableTop="@mipmap/a004"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="center"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/member_button_padding"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/member_button_padding"
                        android:text="@string/service04" />

                    <TextView
                        android:id="@+id/service05"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:tag="@string/service05"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableTop="@mipmap/a005"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="center"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/member_button_padding"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/member_button_padding"
                        android:text="洗衣機清洗" />

                    <TextView
                        android:id="@+id/service06"
                        style="@style/body_text_black54"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/content_padding"
                        android:gravity="center"
                        android:minHeight="@dimen/expand_row_height"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/member_button_padding"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/member_button_padding"
                        android:text="" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/newRecycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>